[gd_scene load_steps=34 format=3 uid="uid://bium0w0bxcd72"]

[ext_resource type="Script" path="res://scenes/gameplay/MoneyManager.gd" id="1_dtds0"]
[ext_resource type="Script" path="res://scenes/gameplay/buy_item_button.gd" id="1_hqkoi"]
[ext_resource type="Script" path="res://scenes/gameplay/gameplay.gd" id="1_xfe0u"]
[ext_resource type="Texture2D" uid="uid://xu4q4ephv6jg" path="res://sprites/gameplay/sky.svg" id="2_0qqun"]
[ext_resource type="Texture2D" uid="uid://bag062w4o0887" path="res://sprites/items/power_plant.svg" id="2_h1u4c"]
[ext_resource type="Texture2D" uid="uid://66xs5d83w8mx" path="res://sprites/gameplay/background.svg" id="2_xeajx"]
[ext_resource type="Script" path="res://scenes/gameplay/energy_manager.gd" id="3_sdb3u"]
[ext_resource type="Texture2D" uid="uid://ddyv4xqyi581h" path="res://sprites/ui/button_active.svg" id="4_4q46l"]
[ext_resource type="Texture2D" uid="uid://hmnxlkm8b7rk" path="res://sprites/ui/button_disabled.svg" id="4_idfva"]
[ext_resource type="Script" path="res://scenes/gameplay/pollution_manager.gd" id="4_ryeiw"]
[ext_resource type="Texture2D" uid="uid://c7g6c8ddnqbtx" path="res://sprites/ui/money.svg" id="5_i6plt"]
[ext_resource type="Texture2D" uid="uid://c48ag4ssxr8vy" path="res://sprites/ui/slider/slider_grab.svg" id="9_kcnxg"]
[ext_resource type="Texture2D" uid="uid://bkbp3aourgms7" path="res://sprites/ui/slider/slider_grab_pollution.svg" id="10_3beg5"]
[ext_resource type="Texture2D" uid="uid://cvccriudqbaj3" path="res://sprites/ui/slider/slider.svg" id="10_tortf"]
[ext_resource type="Texture2D" uid="uid://bh7fnor3671a6" path="res://sprites/ui/slider/pollution_ok.svg" id="11_03arj"]
[ext_resource type="Texture2D" uid="uid://bujvy6jo8pckb" path="res://sprites/ui/slider/energy_out.svg" id="11_s63oe"]
[ext_resource type="Texture2D" uid="uid://c3bww28tuaens" path="res://sprites/ui/slider/energy_overcharge.svg" id="12_1i5kd"]
[ext_resource type="Texture2D" uid="uid://cuxibndcc43em" path="res://sprites/ui/slider/pollution_bad.svg" id="12_8opep"]
[ext_resource type="Texture2D" uid="uid://cmjcs285eqrwg" path="res://sprites/ui/slider/slider_pollution.svg" id="12_a6x7r"]
[ext_resource type="Texture2D" uid="uid://b31cg1aamphne" path="res://sprites/ui/comic_dialogue.svg" id="15_nqnik"]
[ext_resource type="Texture2D" uid="uid://bag8t16pfux4f" path="res://sprites/items/tree.svg" id="21_vbkj3"]
[ext_resource type="Texture2D" uid="uid://nl7rpn5cvidd" path="res://sprites/items/aerogenerator.svg" id="22_bfv2c"]
[ext_resource type="Texture2D" uid="uid://dof6qsxo6ovfa" path="res://sprites/items/aerogenerator_blades.svg" id="23_hxkn2"]
[ext_resource type="Texture2D" uid="uid://bby3ih3lc3qdq" path="res://sprites/items/aerogenerator_top.svg" id="24_bka20"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vm64i"]
bg_color = Color(0.129412, 0.231373, 0.298039, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qga1s"]
texture = ExtResource("10_tortf")
expand_margin_top = 6.0
expand_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_afgud"]
texture = ExtResource("12_a6x7r")
expand_margin_top = 6.0
expand_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_eqs7y"]
texture = ExtResource("4_idfva")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6dcif"]
texture = ExtResource("4_4q46l")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_g7yvf"]
texture = ExtResource("4_4q46l")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_n8tgd"]
texture = ExtResource("4_4q46l")

[sub_resource type="Theme" id="Theme_ycol2"]
Button/styles/disabled = SubResource("StyleBoxTexture_eqs7y")
Button/styles/focus = SubResource("StyleBoxTexture_6dcif")
Button/styles/hover = SubResource("StyleBoxTexture_g7yvf")
Button/styles/normal = SubResource("StyleBoxTexture_n8tgd")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b1gbp"]
bg_color = Color(0.0585938, 0.0859375, 0.171875, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="gameplay" type="Node"]
script = ExtResource("1_xfe0u")

[node name="Managers" type="Node" parent="."]

[node name="MoneyManager" type="Node" parent="Managers"]
script = ExtResource("1_dtds0")

[node name="EnergyManager" type="Node" parent="Managers"]
script = ExtResource("3_sdb3u")

[node name="PollutionManager" type="Node" parent="Managers"]
script = ExtResource("4_ryeiw")

[node name="Sky" type="Sprite2D" parent="."]
modulate = Color(0.046875, 0.148438, 0.304688, 1)
z_index = -3
position = Vector2(400, 103)
texture = ExtResource("2_0qqun")

[node name="Background" type="Sprite2D" parent="."]
z_index = -2
position = Vector2(400, 333)
texture = ExtResource("2_xeajx")

[node name="World" type="Node2D" parent="."]
y_sort_enabled = true

[node name="WorldItems" type="Node2D" parent="World"]
y_sort_enabled = true

[node name="BottomPanel" type="Panel" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -142.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_vm64i")

[node name="EnergySlider" type="HSlider" parent="BottomPanel"]
layout_mode = 0
offset_left = 59.0
offset_top = 3.0
offset_right = 287.0
offset_bottom = 45.0
theme_override_constants/grabber_offset = -13
theme_override_icons/grabber_disabled = ExtResource("9_kcnxg")
theme_override_styles/slider = SubResource("StyleBoxTexture_qga1s")
max_value = 60.0
value = 30.0
editable = false
scrollable = false

[node name="EnergyOut" type="TextureRect" parent="BottomPanel/EnergySlider"]
layout_mode = 0
offset_left = -36.0
offset_top = 5.0
offset_right = -8.0
offset_bottom = 35.0
texture = ExtResource("11_s63oe")

[node name="EnergyOvercharge" type="TextureRect" parent="BottomPanel/EnergySlider"]
layout_mode = 0
offset_left = 240.0
offset_top = 7.0
offset_right = 259.0
offset_bottom = 32.0
texture = ExtResource("12_1i5kd")

[node name="PollutionSlider" type="HSlider" parent="BottomPanel"]
layout_mode = 0
offset_left = 59.0
offset_top = 50.0
offset_right = 287.0
offset_bottom = 92.0
theme_override_constants/grabber_offset = -12
theme_override_icons/grabber_disabled = ExtResource("10_3beg5")
theme_override_styles/slider = SubResource("StyleBoxTexture_afgud")
max_value = 50.0
editable = false
scrollable = false

[node name="PollutionOk" type="TextureRect" parent="BottomPanel/PollutionSlider"]
layout_mode = 0
offset_left = -31.0
offset_top = 8.0
offset_right = -14.0
offset_bottom = 31.0
texture = ExtResource("11_03arj")

[node name="PollutionBad" type="TextureRect" parent="BottomPanel/PollutionSlider"]
layout_mode = 0
offset_left = 240.0
offset_top = 9.0
offset_right = 260.0
offset_bottom = 30.0
texture = ExtResource("12_8opep")

[node name="Money" type="TextureRect" parent="BottomPanel"]
layout_mode = 0
offset_left = 25.0
offset_top = 95.0
offset_right = 63.0
offset_bottom = 126.0
texture = ExtResource("5_i6plt")

[node name="MoneyLabel" type="Label" parent="BottomPanel"]
layout_mode = 0
offset_left = 74.0
offset_top = 89.0
offset_right = 170.0
offset_bottom = 131.0
theme_override_font_sizes/font_size = 28
text = "0"

[node name="BuyCoalPowerPlant" type="Button" parent="BottomPanel"]
layout_mode = 0
offset_left = 339.0
offset_top = 15.0
offset_right = 439.0
offset_bottom = 110.0
focus_mode = 0
theme = SubResource("Theme_ycol2")
script = ExtResource("1_hqkoi")
gameplay_item = "res://scenes/gameplay/coal_power_plant.tscn"

[node name="PowerPlant" type="TextureRect" parent="BottomPanel/BuyCoalPowerPlant"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.0
offset_top = -22.5
offset_right = 22.0
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_h1u4c")

[node name="Panel" type="Panel" parent="BottomPanel/BuyCoalPowerPlant"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -42.0
offset_top = -15.0
offset_right = 42.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_b1gbp")

[node name="Money" type="TextureRect" parent="BottomPanel/BuyCoalPowerPlant/Panel"]
layout_mode = 0
offset_left = 7.0
offset_top = 8.0
offset_right = 45.0
offset_bottom = 39.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_i6plt")

[node name="Label" type="Label" parent="BottomPanel/BuyCoalPowerPlant/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -13.0
offset_right = 32.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "100"

[node name="ComicDialogue" type="TextureRect" parent="BottomPanel/BuyCoalPowerPlant"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -126.0
offset_top = -231.0
offset_right = 126.0
offset_bottom = -86.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
texture = ExtResource("15_nqnik")

[node name="Title" type="Label" parent="BottomPanel/BuyCoalPowerPlant/ComicDialogue"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.215686, 0.223529, 0.137255, 1)
theme_override_font_sizes/font_size = 19
text = "Central termoeléctrica"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Description" type="Label" parent="BottomPanel/BuyCoalPowerPlant/ComicDialogue"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 49.0
offset_bottom = 117.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.466667, 0.486275, 0.294118, 1)
theme_override_font_sizes/font_size = 17
text = "Produce electricidad pero también contaminación"
horizontal_alignment = 1
autowrap_mode = 2

[node name="BuyTree" type="Button" parent="BottomPanel"]
layout_mode = 0
offset_left = 452.0
offset_top = 15.0
offset_right = 552.0
offset_bottom = 110.0
focus_mode = 0
theme = SubResource("Theme_ycol2")
script = ExtResource("1_hqkoi")
gameplay_item = "res://scenes/gameplay/tree.tscn"
money_cost = 50

[node name="PowerPlant" type="TextureRect" parent="BottomPanel/BuyTree"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.0
offset_top = -32.0
offset_right = 22.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("21_vbkj3")

[node name="Panel" type="Panel" parent="BottomPanel/BuyTree"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -42.0
offset_top = -15.0
offset_right = 42.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_b1gbp")

[node name="Money" type="TextureRect" parent="BottomPanel/BuyTree/Panel"]
layout_mode = 0
offset_left = 7.0
offset_top = 8.0
offset_right = 45.0
offset_bottom = 39.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_i6plt")

[node name="Label" type="Label" parent="BottomPanel/BuyTree/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -13.0
offset_right = 32.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "50"

[node name="ComicDialogue" type="TextureRect" parent="BottomPanel/BuyTree"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -126.0
offset_top = -231.0
offset_right = 126.0
offset_bottom = -86.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
texture = ExtResource("15_nqnik")

[node name="Title" type="Label" parent="BottomPanel/BuyTree/ComicDialogue"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.215686, 0.223529, 0.137255, 1)
theme_override_font_sizes/font_size = 19
text = "Árbol"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Description" type="Label" parent="BottomPanel/BuyTree/ComicDialogue"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 49.0
offset_bottom = 117.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.466667, 0.486275, 0.294118, 1)
theme_override_font_sizes/font_size = 17
text = "Reduce la contaminación poco a poco"
horizontal_alignment = 1
autowrap_mode = 2

[node name="BuyAerogenerator" type="Button" parent="BottomPanel"]
layout_mode = 0
offset_left = 565.0
offset_top = 15.0
offset_right = 665.0
offset_bottom = 110.0
focus_mode = 0
theme = SubResource("Theme_ycol2")
script = ExtResource("1_hqkoi")
gameplay_item = "res://scenes/gameplay/aerogenerador.tscn"
money_cost = 200

[node name="PowerPlant" type="TextureRect" parent="BottomPanel/BuyAerogenerator"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -6.0
offset_top = -21.5
offset_right = 6.0
offset_bottom = 32.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("22_bfv2c")

[node name="AerogeneratorBlades" type="TextureRect" parent="BottomPanel/BuyAerogenerator/PowerPlant"]
layout_mode = 0
offset_left = 25.0
offset_top = -29.0
offset_right = 79.0
offset_bottom = 19.0
rotation = 1.28703
texture = ExtResource("23_hxkn2")

[node name="AerogeneratorTop" type="TextureRect" parent="BottomPanel/BuyAerogenerator/PowerPlant"]
layout_mode = 0
offset_left = -1.0
offset_top = 4.0
offset_right = 6.0
offset_bottom = 10.0
texture = ExtResource("24_bka20")

[node name="Panel" type="Panel" parent="BottomPanel/BuyAerogenerator"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -42.0
offset_top = -15.0
offset_right = 42.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_b1gbp")

[node name="Money" type="TextureRect" parent="BottomPanel/BuyAerogenerator/Panel"]
layout_mode = 0
offset_left = 7.0
offset_top = 8.0
offset_right = 45.0
offset_bottom = 39.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_i6plt")

[node name="Label" type="Label" parent="BottomPanel/BuyAerogenerator/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -13.0
offset_right = 32.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "200"

[node name="ComicDialogue" type="TextureRect" parent="BottomPanel/BuyAerogenerator"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -126.0
offset_top = -231.0
offset_right = 126.0
offset_bottom = -86.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
texture = ExtResource("15_nqnik")

[node name="Title" type="Label" parent="BottomPanel/BuyAerogenerator/ComicDialogue"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.215686, 0.223529, 0.137255, 1)
theme_override_font_sizes/font_size = 19
text = "Árbol"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Description" type="Label" parent="BottomPanel/BuyAerogenerator/ComicDialogue"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 49.0
offset_bottom = 117.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.466667, 0.486275, 0.294118, 1)
theme_override_font_sizes/font_size = 17
text = "Reduce la contaminación poco a poco"
horizontal_alignment = 1
autowrap_mode = 2

[connection signal="on_money_change" from="Managers/MoneyManager" to="BottomPanel/BuyCoalPowerPlant" method="_on_money_manager_on_money_change"]
[connection signal="on_money_change" from="Managers/MoneyManager" to="BottomPanel/BuyTree" method="_on_money_manager_on_money_change"]
[connection signal="on_money_change" from="Managers/MoneyManager" to="BottomPanel/BuyAerogenerator" method="_on_money_manager_on_money_change"]
[connection signal="button_down" from="BottomPanel/BuyCoalPowerPlant" to="BottomPanel/BuyCoalPowerPlant" method="_on_button_down"]
[connection signal="mouse_entered" from="BottomPanel/BuyCoalPowerPlant" to="BottomPanel/BuyCoalPowerPlant" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="BottomPanel/BuyCoalPowerPlant" to="BottomPanel/BuyCoalPowerPlant" method="_on_mouse_exited"]
[connection signal="button_down" from="BottomPanel/BuyTree" to="BottomPanel/BuyTree" method="_on_button_down"]
[connection signal="mouse_entered" from="BottomPanel/BuyTree" to="BottomPanel/BuyTree" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="BottomPanel/BuyTree" to="BottomPanel/BuyTree" method="_on_mouse_exited"]
[connection signal="button_down" from="BottomPanel/BuyAerogenerator" to="BottomPanel/BuyAerogenerator" method="_on_button_down"]
[connection signal="mouse_entered" from="BottomPanel/BuyAerogenerator" to="BottomPanel/BuyAerogenerator" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="BottomPanel/BuyAerogenerator" to="BottomPanel/BuyAerogenerator" method="_on_mouse_exited"]
